--- a/cldf/requirements.txt
+++ b/cldf/requirements.txt
@@ -14,9 +14,10 @@ csvw==3.3.0
 gitdb==4.0.11
 greenlet==3.0.3
 idna==3.7
+igraph==0.11.5
 iniconfig==2.0.0
 isodate==0.6.1
-jsonschema==4.21.1
+jsonschema==4.22.0
 lingpy==2.6.13
 lxml==5.2.1
 Markdown==3.6
@@ -37,8 +38,9 @@ pylatexenc==2.10
 pylexibank==3.4.0
 pytest==8.2.0
 python-dateutil==2.9.0.post0
+python-igraph==0.11.5
 rdflib==7.0.0
-referencing==0.35.0
+referencing==0.35.1
 regex==2024.4.28
 requests==2.31.0
 rfc3986==1.5.0
@@ -49,8 +51,10 @@ soupsieve==2.5
 SQLAlchemy==1.4.52
 tabulate==0.9.0
 termcolor==2.4.0
-tqdm==4.66.2
+texttable==1.7.0
+tqdm==4.66.4
 uritemplate==4.1.1
 urllib3==2.2.1
+wcwidth==0.2.13
 xlrd==2.0.1
 zenodoclient==0.5.1
