--- a/cldf/requirements.txt
+++ b/cldf/requirements.txt
@@ -13,6 +13,7 @@ colorlog==6.8.2
 csvw==3.3.0
 gitdb==4.0.11
 idna==3.7
+idspy==0.3.0
 iniconfig==2.0.0
 isodate==0.6.1
 jsonschema==4.23.0
@@ -22,7 +23,6 @@ Markdown==3.6
 nameparser==1.1.3
 networkx==3.3
 newick==1.9.0
-nexusmaker==2.0.5
 numpy==2.0.1
 openpyxl==3.1.5
 packaging==24.1
@@ -37,7 +37,6 @@ pylatexenc==2.10
 pylexibank==3.5.0
 pytest==8.3.2
 python-dateutil==2.9.0.post0
-python-nexus==2.9.0
 rdflib==7.0.0
 referencing==0.35.1
 regex==2024.7.24
